<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Practica3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="be_in_touch">Be in touch</string>
    <string name="skip_tutorial"><![CDATA[Skip Tutorial ->]]></string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="networking">Networking</string>
    <string name="anonymous_user">ANONYMOUS USER</string>
    <string name="dev_community">Dev Community</string>
    <string name="buttonTryAgain">TRY AGAIN</string>
    <string name="learn">Learn</string>
    <string name="continueAnonim">CONTINUE ANONYMOUSLY</string>
    <string name="UPScantSign">UPS... couldn\'t Sign In</string>
    <string name="noMatch">Your username and password doesn\'t match.</string>
    <string name="plsAgain">Please try again.</string>
    <string name="signIn">SING IN</string>
    <string name="email" translatable="false">Email</string>
    <string name="sandra_adams_email_com" translatable="false">sandra.adams@email.com</string>
    <string name="sandra_adams" translatable="false">Sandra Adams</string>
    <string name="respuesta">respuesta</string>
    <string name="open" />
    <string name="close" />
    <string name="faqs">FAQS</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="events">Events</string>
    <string name="articles">Articles</string>
    <string name="news">News</string>
    <string name="sing_in">SING IN</string>

    <string name="pregunta" translatable="false">pregunta</string>
    <string name="todo">TODO</string>


</resources>
