<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_news_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/articles"
            android:icon="@drawable/ic_articles_black_24dp"
            android:title="@string/articles" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_events_black_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_calendar_black_24dp"
            android:title="@string/calendar"
            tools:ignore="PrivateResource" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/bookmark"
            android:icon="@drawable/ic_news_black_24dp"
            android:title="@string/bookmarks" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs_black_24dp"
            android:title="@string/faqs" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>
